name:                geocode-mapbox
version:             1.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       aeson >=1.2.4 && <1.5
                     , base >=4.11.0 && <4.13
                     , data-default >=0.7.1 && <0.8
                     , http-client >=0.5.13 && <0.6
                     , req >=1.2.1 && <1.3
                     , text >=1.2.3 && <1.3
                     , witherable ==0.3.*
  exposed-modules:     Geocode.Mapbox
